# cmd/web/orderhandler.go
@@ -13,6 +13,16 @@ import (
 // @Description  Creates a new order for a specific product. This order is created by an existing buyer with an account.
 // @Accept       json
 // @Produce      json
+// @Param 		 product_id body string true "The product for which we are creating an order"
+// @Param 		 buyer_id body string true "The id of the buyer who is creating the order"
+// @Param 		 order_quantity body int true "Quantity of the product being ordered"
+// @Param 		 payment_type body string true "Payment method chosen for this order, can only be 'card' or 'paynow_online'"
+// @Param 		 delivery_type body string true "Type of delivery method, can only be 'self_collection' or 'standard_delivery'"
+// @Param 		 phone_number body string true "Phone number of buyer"
+// @Param        address_line_1 body string true "Delivery Address"
+// @Param        address_line_2 body string false "Delivery Address 2"
+// @Param        postal_code body string false "Postal code of address"
+// @Param		 amount body int true "Amount to be paid for the order in cents"
 // @Success      201  {object}  data.CreateOrderResponseData
 // @Failure      400  {object}  data.Message
 // @Failure      500  {object}  data.Message
@@ -39,10 +49,20 @@ func handleCreateOrder(c *gin.Context) {
 }
 
 // handleCreateGuestOrder godoc
-// @Summary      Creates a new order
-// @Description  Creates a new order for a specific product. This order is created by a Guest account.
+// @Summary      Creates a new guest order
+// @Description  Creates a new order for a specific product. This order is created by a guest user.
 // @Accept       json
 // @Produce      json
+// @Param 		 product_id body string true "The product for which we are creating an order"
+// @Param 		 email body string true "The email of the guest user"
+// @Param 		 order_quantity body int true "Quantity of the product being ordered"
+// @Param 		 payment_type body string true "Payment method chosen for this order, can only be 'card' or 'paynow_online'"
+// @Param 		 delivery_type body string true "Type of delivery method, can only be 'self_collection' or 'standard_delivery'"
+// @Param 		 phone_number body string true "Phone number of buyer"
+// @Param        address_line_1 body string true "Delivery Address"
+// @Param        address_line_2 body string false "Delivery Address 2"
+// @Param        postal_code body string false "Postal code of address"
+// @Param		 amount body int true "Amount to be paid for the order in cents"
 // @Success      201  {object}  data.CreateGuestOrderResponseData
 // @Failure      400  {object}  data.Message
 // @Failure      500  {object}  data.Message
@@ -68,15 +88,15 @@ func handleCreateGuestOrder(c *gin.Context) {
 	c.JSON(http.StatusCreated, &response)
 }
 
-// handleCreateGuestOrder godoc
-// @Summary      Creates a new order
-// @Description  Creates a new order for a specific product. This order is created by a Guest account.
+// handleGetOrderById godoc
+// @Summary      Fetched order details for an order with a specific order id
+// @Description  Returns the order details of an order with a given order id. If the order id does not exists, returns a 404 error.
 // @Accept       json
 // @Produce      json
-// @Success      201  {object}  data.CreateGuestOrderResponseData
-// @Failure      400  {object}  data.Message
+// @Success      200  {object}  data.GetOrderByIdResponseData
+// @Failure      404  {object}  data.Message
 // @Failure      500  {object}  data.Message
-// @Router       /orders/guest [post]
+// @Router       /orders/{id} [get]
 func handleGetOrderById(c *gin.Context) {
 	productId := c.Param("id")
 
@@ -91,15 +111,15 @@ func handleGetOrderById(c *gin.Context) {
 	c.JSON(http.StatusOK, &product)
 }
 
-// handleCreateGuestOrder godoc
-// @Summary      Creates a new order
-// @Description  Creates a new order for a specific product. This order is created by a Guest account.
+// handleGetGuestOrderById godoc
+// @Summary      Fetched order details for an guest order with a specific guest order id
+// @Description  Returns the order details of an guest order with a given guest order id. If the order id does not exists, returns a 404 error.
 // @Accept       json
 // @Produce      json
-// @Success      201  {object}  data.CreateGuestOrderResponseData
-// @Failure      400  {object}  data.Message
+// @Success      200  {object}  data.GetGuestOrderByIdResponseData
+// @Failure      404  {object}  data.Message
 // @Failure      500  {object}  data.Message
-// @Router       /orders/guest [post]
+// @Router       /orders/{id}/guest [get]
 func handleGetGuestOrderById(c *gin.Context) {
 	productId := c.Param("id")
 
